tests/reject/proof_without_qed.alg
sort S;
var x : S;
lemma refl x = x;
proof
  x;
